# TCP_Serv_C-

./: CMakeLists.txt  README.md
Networking/: CMakeLists.txt
Networking/include/Networki/: BaseServ.h  tcp_connection.h
Networking/src/: BaseServ.cpp  tcp_connection.cpp
client/: CMakeLists.txt  client_main.cpp
server/: CMakeLists.txt  server_main.cpp
